# Agent-Builder

./: INSTALL.md  pyproject.toml  quick-start.bat  quick-start.sh
builder/backend/routes/: health.py
builder/frontend/: index.html  vite.config.js
builder/frontend/src/: App.jsx  store.js
builder/frontend/src/components/: ResizeHandle.jsx  Sidebar.jsx  TerminalPanel.jsx  ThemeToggle.jsx  TopBar.jsx
builder/frontend/src/components/auth/: LoginPage.jsx
builder/frontend/src/styles/: components.css  tokens.css
deploy/docker/: docker-compose.dev.yml
scripts/docker/: init-backend.sh
